<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.layout.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/LogoImage"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/k9kooler_logo" />

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <ImageButton

            android:id="@+id/Settings"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_menu_preferences" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tartemptext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Target Internal Temperature"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tartempview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="60dp" />

            <Button
                android:id="@+id/tempchangebutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Change Target Temperature"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sensor_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Sensor1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sensor_value_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/sensor_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Sensor2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sensor_value_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sensor_title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Sensor3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sensor_value_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sensor_title_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sensor4"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sensor_value_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sensor_title_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sensor5"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sensor_value_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sensor_title_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sensor6"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sensor_value_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Refresh" />
        <Button
            android:id="@+id/prechill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Pre-Chill"/>

        <Button
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Video" />
    </LinearLayout>

</LinearLayout>



